{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 215,
  "lineage": "59d7a12c-2180-c9de-415a-ec8c7455db18",
  "resources": [
    {
      "module": "module.ecs-multi",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163859990434:subnet/subnet-011619ef3168e2132",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011619ef3168e2132",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "163859990434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "biasharaiq-public-1"
            },
            "vpc_id": "vpc-07d9e8afdb79071c0"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ecs-multi",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:loadbalancer/app/biasharaiq-alb/e51cc7d36f64be0f",
            "arn_suffix": "app/biasharaiq-alb/e51cc7d36f64be0f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "biasharaiq-alb-208863488.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:163859990434:loadbalancer/app/biasharaiq-alb/e51cc7d36f64be0f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "biasharaiq-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0ebadc53d652e39c5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-011619ef3168e2132"
              },
              {
                "subnet_id": "subnet-06e666855c7ac2f0c"
              }
            ],
            "subnets": [
              "subnet-011619ef3168e2132",
              "subnet-06e666855c7ac2f0c"
            ],
            "tags": {
              "Project": "biasharaiq"
            },
            "tags_all": {
              "Project": "biasharaiq"
            },
            "vpc_id": "vpc-07d9e8afdb79071c0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:loadbalancer/app/biasharaiq-alb/e51cc7d36f64be0f"
          },
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-multi",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:listener/app/biasharaiq-alb/e51cc7d36f64be0f/6cc6ec905e047415",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:163859990434:listener/app/biasharaiq-alb/e51cc7d36f64be0f/6cc6ec905e047415",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:loadbalancer/app/biasharaiq-alb/e51cc7d36f64be0f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:listener/app/biasharaiq-alb/e51cc7d36f64be0f/6cc6ec905e047415"
          },
          "dependencies": [
            "module.ecs-multi.aws_lb.main",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-multi",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "backend",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:targetgroup/backen20260619143806657800000002/23ad1fe86dca7437",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:listener-rule/app/biasharaiq-alb/e51cc7d36f64be0f/6cc6ec905e047415/4334bf7ccc9397d7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/backend",
                      "/backend/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:163859990434:listener-rule/app/biasharaiq-alb/e51cc7d36f64be0f/6cc6ec905e047415/4334bf7ccc9397d7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:listener/app/biasharaiq-alb/e51cc7d36f64be0f/6cc6ec905e047415",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:listener-rule/app/biasharaiq-alb/e51cc7d36f64be0f/6cc6ec905e047415/4334bf7ccc9397d7"
          },
          "dependencies": [
            "module.ecs-multi.aws_lb.main",
            "module.ecs-multi.aws_lb_listener.http",
            "module.ecs-multi.aws_lb_target_group.services",
            "module.ecs-multi.data.aws_subnet.selected",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:targetgroup/fronte20260619143806657800000003/f97d2b35fd21eec2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:listener-rule/app/biasharaiq-alb/e51cc7d36f64be0f/6cc6ec905e047415/97baab54e6c8b966",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:163859990434:listener-rule/app/biasharaiq-alb/e51cc7d36f64be0f/6cc6ec905e047415/97baab54e6c8b966",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:listener/app/biasharaiq-alb/e51cc7d36f64be0f/6cc6ec905e047415",
            "priority": 11,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:listener-rule/app/biasharaiq-alb/e51cc7d36f64be0f/6cc6ec905e047415/97baab54e6c8b966"
          },
          "dependencies": [
            "module.ecs-multi.aws_lb.main",
            "module.ecs-multi.aws_lb_listener.http",
            "module.ecs-multi.aws_lb_target_group.services",
            "module.ecs-multi.data.aws_subnet.selected",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-multi",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "backend",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:targetgroup/backen20260619143806657800000002/23ad1fe86dca7437",
            "arn_suffix": "targetgroup/backen20260619143806657800000002/23ad1fe86dca7437",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:163859990434:targetgroup/backen20260619143806657800000002/23ad1fe86dca7437",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:163859990434:loadbalancer/app/biasharaiq-alb/e51cc7d36f64be0f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backen20260619143806657800000002",
            "name_prefix": "backen",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Project": "biasharaiq",
              "Service": "backend"
            },
            "tags_all": {
              "Project": "biasharaiq",
              "Service": "backend"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07d9e8afdb79071c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:targetgroup/backen20260619143806657800000002/23ad1fe86dca7437"
          },
          "dependencies": [
            "module.ecs-multi.data.aws_subnet.selected",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:targetgroup/fronte20260619143806657800000003/f97d2b35fd21eec2",
            "arn_suffix": "targetgroup/fronte20260619143806657800000003/f97d2b35fd21eec2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:163859990434:targetgroup/fronte20260619143806657800000003/f97d2b35fd21eec2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:163859990434:loadbalancer/app/biasharaiq-alb/e51cc7d36f64be0f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fronte20260619143806657800000003",
            "name_prefix": "fronte",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Project": "biasharaiq",
              "Service": "frontend"
            },
            "tags_all": {
              "Project": "biasharaiq",
              "Service": "frontend"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07d9e8afdb79071c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163859990434:targetgroup/fronte20260619143806657800000003/f97d2b35fd21eec2"
          },
          "dependencies": [
            "module.ecs-multi.data.aws_subnet.selected",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163859990434:internet-gateway/igw-0597e3a311b204dd0",
            "id": "igw-0597e3a311b204dd0",
            "owner_id": "163859990434",
            "region": "us-east-1",
            "tags": {
              "Name": "biasharaiq-igw"
            },
            "tags_all": {
              "Name": "biasharaiq-igw"
            },
            "vpc_id": "vpc-07d9e8afdb79071c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163859990434",
            "id": "igw-0597e3a311b204dd0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163859990434:route-table/rtb-0e3d20302f165512c",
            "id": "rtb-0e3d20302f165512c",
            "owner_id": "163859990434",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0597e3a311b204dd0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "biasharaiq-public-rt"
            },
            "tags_all": {
              "Name": "biasharaiq-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9e8afdb79071c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163859990434",
            "id": "rtb-0e3d20302f165512c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0843c290045bc31cd",
            "region": "us-east-1",
            "route_table_id": "rtb-0e3d20302f165512c",
            "subnet_id": "subnet-011619ef3168e2132"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163859990434",
            "id": "rtbassoc-0843c290045bc31cd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b12e4485aed2359c",
            "region": "us-east-1",
            "route_table_id": "rtb-0e3d20302f165512c",
            "subnet_id": "subnet-06e666855c7ac2f0c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163859990434",
            "id": "rtbassoc-0b12e4485aed2359c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163859990434:security-group/sg-0ebadc53d652e39c5",
            "description": "Security group for the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebadc53d652e39c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "biasharaiq-alb-sg-20260620111405580700000001",
            "name_prefix": "biasharaiq-alb-sg-",
            "owner_id": "163859990434",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "biasharaiq-alb-sg"
            },
            "tags_all": {
              "Name": "biasharaiq-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9e8afdb79071c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163859990434",
            "id": "sg-0ebadc53d652e39c5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163859990434:security-group/sg-08fdee1a735c078f2",
            "description": "Security group for ECS tasks - accepts traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound (ECR, Secrets Manager, CloudWatch)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fdee1a735c078f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "All traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ebadc53d652e39c5"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "biasharaiq-ecs-sg-20260620114549418300000001",
            "name_prefix": "biasharaiq-ecs-sg-",
            "owner_id": "163859990434",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "biasharaiq-ecs-sg"
            },
            "tags_all": {
              "Name": "biasharaiq-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9e8afdb79071c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163859990434",
            "id": "sg-08fdee1a735c078f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163859990434:subnet/subnet-011619ef3168e2132",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011619ef3168e2132",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "163859990434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "biasharaiq-public-1"
            },
            "tags_all": {
              "Name": "biasharaiq-public-1"
            },
            "vpc_id": "vpc-07d9e8afdb79071c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163859990434",
            "id": "subnet-011619ef3168e2132",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163859990434:subnet/subnet-06e666855c7ac2f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e666855c7ac2f0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "163859990434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "biasharaiq-public-2"
            },
            "tags_all": {
              "Name": "biasharaiq-public-2"
            },
            "vpc_id": "vpc-07d9e8afdb79071c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163859990434",
            "id": "subnet-06e666855c7ac2f0c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163859990434:vpc/vpc-07d9e8afdb79071c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00eb626c93db7710d",
            "default_route_table_id": "rtb-0dcbacba0b9420b91",
            "default_security_group_id": "sg-0b7b0ee9d6c0e59a3",
            "dhcp_options_id": "dopt-032b5453c0cc889ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d9e8afdb79071c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dcbacba0b9420b91",
            "owner_id": "163859990434",
            "region": "us-east-1",
            "tags": {
              "Name": "biasharaiq-vpc"
            },
            "tags_all": {
              "Name": "biasharaiq-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163859990434",
            "id": "vpc-07d9e8afdb79071c0",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}